# resource-finder

./: README.md  report_section4.md  requirements.txt  section_6.docx
data/: ablation_metrics.json  ablation_pool.json  ablation_results_raw.json  annotations_template.json  benchmark_queries.json  normalized_resources.bm25.pkl  normalized_resources.embeddings.npy  normalized_resources.jsonl  raw_osm.jsonl  raw_resources.jsonl  raw_resources_scraped.jsonl  raw_resources_shelters.jsonl  run_results.json  run_results_raw.json  schema_example.json
src/: ablation.py  ablation_eval.py  api.py  build_bm25.py  build_embeddings.py  build_index.py  collect_data.py  evaluate.py  fetch_api_resources.py  geocode_michigan.py  hybrid_retrieve.py  latency_eval.py  make_example_run_results.py  merge_raw.py  normalize_records.py  pyproject.toml  query_parser.py  rerank.py  run_benchmark.py  scrape_foodpantries.py  scrape_shelters.py  search.py
web/: next.config.ts  package-lock.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/about/: page.tsx
web/components/: CrisisBanner.tsx  SiteNav.tsx
