[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "geopy>=2.4.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "python-dateutil>=2.9.0.post0",
    "rank-bm25>=0.2.2",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.4.0",
    "spacy>=3.8.14",
    "tqdm>=4.67.3",
]
